--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.12.0",
-    "mongoose": "^8.9.0",
-    "tsconfig-paths": "^4.2.0"
+    "mongoose": "^8.9.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
@@ -32,6 +31,7 @@
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.2"
   }
 }
